# skyprotocol

./: .gitignore  .gitmodules  .pre-commit-config.yaml  HACKING.md  INSTALL.md  Makefile  README.md  add-node.py  all-sky.ss  build.ss  cabal.project  default.nix  echo.ss  erasure-coding.ss  flake.nix  links  main.ss  pkgs.nix  shell.nix  sky-atlas.cabal  testUser.db  types.ss  unit-tests.ss
.github/workflows/: sky-protocol-tests.yml  test-contracts.yml
app/: Main.hs  ShowPir.hs
cardano/: Makefile  flake.nix  skyprotocol-cardano.cabal
cardano/app/: Main.hs
cardano/src/: Sky.hs  Utils.hs
common/Common/: Crypto.hs  OffChain.hs  Trie.hs
common/Common/Types/: Base.hs  Cons.hs  Lift.hs  Lift2.hs
config/: example-config.yaml  test-config.yaml
contracts/: .gitignore  README.adoc  cabal.project  plutus-tx-template.cabal
contracts/app/: GenBountyBlueprint.hs  GenMintingPolicyBlueprint.hs  GenTopHash.hs  GenValidatorBlueprint.hs
contracts/off-chain/: README.adoc  claim-bounty.mjs  mint-nft.mjs  offer-bounty.mjs  package-lock.json  package.json  post-setup.sh  pre-setup.sh  send-lovelace.mjs  test-1.sh  test-2.sh  test-bounty.sh  test-bridge.sh  test-setup.sh  update-bridge.mjs  util.mjs  verify-bounty-claimed.mjs  verify-bounty-offered.mjs  verify-bridge.mjs
contracts/off-chain/http-api/: Dockerfile  docker-compose.yml  package-lock.json  package.json  read-bridge.mjs  server.js  server.mjs  start.sh  update-bridge.mjs  util.mjs
contracts/src/: BountyContract.hs  MyTrieStuff.hs  SkyBase.hs  SkyBridgeContract.hs  SkyCrypto.hs  SkyDA.hs  SkyMintingPolicy.hs  Trie.hs  TrieUtils.hs
contracts/test/: Spec.hs
contracts/test/Spec/: MultiSigSpec.hs  SkyBaseSpec.hs  SkySpec.hs  TrieSpec.hs  TrieUtilsSpec.hs
doc/: GeneralFlow.md  HACKING.md  Preview.md  Providers.md  Running.md  persist.md
doc/catalyst-milestone-1/: README.adoc  catalyst-milestone-1.adoc
merkle-patricia-trie/: CHANGELOG.md  flake.nix  invalid_proof.json  merkle-patricia-trie.cabal  valid_double_proof.json  valid_proof.json
merkle-patricia-trie/lib/Data/: MerkleTrie.hs  MyTrie.hs  Trie.hs  Utils.hs
merkle-patricia-trie/lib/Data/Internal/: RecursionSchemes.hs  Trie.hs  Zipper.hs
merkle-patricia-trie/lib/Data/Trie/: BigEndian.hs  Internal.hs  LittleEndian.hs  Zipper.hs
merkle-patricia-trie/lib/Merkle/: Trie.hs  Types.hs
merkle-patricia-trie/test/: MerkleTrieSpec.hs  MyTrieSpec.hs  TrieKeySpec.hs  TrieSpec.hs  UtilsSpec.hs
offchain/: API.hs  App.hs  Handler.hs  Script.hs  Transaction.hs  Utils.hs
offchain/API/: Bounty.hs  Bridge.hs  Da.hs  SkyMintingPolicy.hs  Types.hs  Util.hs
offchain/API/Bounty/: Contracts.hs
offchain/API/Bridge/: Contracts.hs
offchain/App/: Env.hs  Error.hs
offchain/Handler/: Bounty.hs  Bridge.hs  Da.hs
offchain/Transaction/: Bounty.hs  Bridge.hs
onchain/Contract/: Bounty.hs  Bridge.hs  DaH.hs  MintingPolicy.hs
pubsub/: command.ss  handler.ss  lib.ss  main.ss  node.ss
pubsub-haskell/: hie.yaml  sky-node.cabal
pubsub-haskell/app/: Main.hs
pubsub-haskell/lib/: Config.hs
pubsub-haskell/lib/App/: Error.hs
scripts/: claim-bounty.sh  create-bridge.sh  create-topic.sh  message_hash  offer-bounty.sh  publish-message.sh  update-bridge.sh
sky-atlas/: GeneralFlow.md  README.md  bridgeValidator-uplc.dump  cabal.project  flake.nix  general-flow  hls.yaml  notes  sky-atlas.cabal
sky-atlas/app/: Main.hs  ShowPir.hs
sky-atlas/common/: Common.hs  Crypto.hs  DA.hs  Trie.hs  Types.hs
sky-atlas/common/Common/: Crypto.hs  DA.hs  OffChain.hs  OnChain.hs  Trie.hs  Types.hs
sky-atlas/common/Common/Types/: Base.hs  Cons.hs  Lift.hs
sky-atlas/config/: example-config.yaml  local.yaml  test.yaml
sky-atlas/docs/: Providers.md
sky-atlas/nix/: project.nix
sky-atlas/nix-orig/: shell.nix
sky-atlas/offchain/: API.hs  App.hs  Utils.hs
sky-atlas/offchain/API/: Bounty.hs  Bridge.hs  Da.hs  SkyMintingPolicy.hs  Topic.hs  Types.hs  Util.hs
sky-atlas/offchain/API/Bounty/: Contracts.hs
sky-atlas/offchain/API/Bridge/: Contracts.hs
sky-atlas/offchain/API/Util/: Contracts.hs
sky-atlas/offchain/App/: Env.hs  Error.hs
sky-atlas/onchain/: Contract.hs
sky-atlas/onchain/Contract/: Bounty.hs  Bridge.hs  DaH.hs  SkyBridge.hs  SkyMintingPolicy.hs  TrieH.hs
sky-atlas/scripts/: README.md  create-bridge.sh  create-collateral.sh  create-topic.sh  message_hash  offer-bounty.sh  publish-message.sh  split-utxo.sh  update-bridge.sh
sky-atlas/tests/: CommonSpec.hs  OffChainSpec.hs  OnChainSpec.hs  Spec.hs  Util.hs
sky-atlas/tests/Common/: CompiledSpec.hs  CryptoSpec.hs  DaSpec.hs  TrieSpec.hs  TypesSpec.hs
sky-atlas/tests/OffChain/: API.hs
sky-atlas/tests/OffChain/admin/: payment.address  payment.skey  payment.vkey
sky-atlas/tests/OffChain/claimant/: payment.address  payment.skey  payment.vkey
sky-atlas/tests/OffChain/offerer/: payment.address  payment.skey  payment.vkey
sky-atlas/tests/OnChain/: BountySpec.hs  BridgeSpec.hs  ContractSpec.hs
sky-bin/: all-sky.ss  build.ss  env.sh  gerbil.pkg  sky-install
sky-node/: CHANGELOG.md  sky-node.cabal
sky-node-gerbil/: erasure-coding.ss
sky-node-gerbil/pubsub/: handler.ss  lib.ss  message.ss  node.ss
sky-node-haskell/: cabal.project  flake.nix  sky-node.cabal
sky-node-haskell/app/: Main.hs
sky-node-haskell/lib/: App.hs  Peer.hs  Types.hs  Utils.hs
sky-node-haskell/lib/App/: Env.hs  Error.hs
sky-node-haskell/lib/Effect/: PeerEff.hs  SocketEff.hs
sky-node-haskell/lib/Peer/: Handlers.hs
sky-node/app/: Main.hs
sky-node/config/: default.yaml
sky-node/lib/: App.hs  Config.hs  Peer.hs  Types.hs
sky-node/lib/App/: Env.hs  Error.hs
sky-node/lib/Peer/: Handlers.hs
sky-pubsub/: Makefile  build.ss  flake.nix  gerbil.pkg  test-nodes.py  test.ss
sky-pubsub/pubsub/: main.ss
t/: test-nodes.py  test.ss
tests/: CommonSpec.hs  OnChainSpec.hs  Util.hs
tests/Common/: CompiledSpec.hs  CryptoSpec.hs  TrieSpec.hs  TypesSpec.hs
tests/OffChain/: API.hs
tests/OnChain/: BountySpec.hs  BridgeSpec.hs  ContractSpec.hs  MintingPolicySpec.hs
