cabal-version:   3.0
name:            plutus-tx-template
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options:
    -fexpose-all-unfoldings -fno-full-laziness
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-small-strict-fields -fno-unbox-strict-fields
    -Wno-unrecognised-pragmas -fobject-code -fplugin-opt
    PlutusTx.Plugin:target-version=1.0.0

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    Strict
    TypeApplications
  default-language: Haskell2010

library scripts
  import:         options
  hs-source-dirs: src
  exposed-modules:
    SkyBridgeContract
    SkyMintingPolicy
    BountyContract

library scripts
  import:          options
  hs-source-dirs:  src
  exposed-modules:
    BountyContract
    SkyBase
    SkyBridgeContract
    SkyCrypto
    SkyDA
    SkyMintingPolicy
    Trie

  build-depends:
    , base ^>=4.18.2.1
    , containers ^>=0.6.7
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0
    , crypton
    , bytestring
    , binary
    , hex-text             ^>=0.1.0.9
    , serialise            ^>=0.2.6.1
    , template-haskell
    , text                 ^>=2.0.2

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

executable gen-validator-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenValidatorBlueprint.hs
  build-depends:
    , base ^>=4.18.2.1
    , containers ^>=0.6.7
    , bytestring ^>=0.11.5.3
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0
    , plutus-tx-plugin ^>=1.34.1.0
    , hex-text ^>=0.1.0.9
    , text ^>=2.0.2
    , scripts

executable gen-bounty-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenBountyBlueprint.hs
  build-depends:
    , base ^>=4.18.2.1
    , containers ^>=0.6.7
    , bytestring ^>=0.11.5.3
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0
    , plutus-tx-plugin ^>=1.34.1.0
    , hex-text ^>=0.1.0.9
    , text ^>=2.0.2
    , scripts

executable gen-minting-policy-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenMintingPolicyBlueprint.hs
  build-depends:
    , base ^>=4.18.2.1
    , containers ^>=0.6.7
    , bytestring ^>=0.11.5.3
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0
    , plutus-tx-plugin ^>=1.34.1.0
    , hex-text ^>=0.1.0.9
    , text ^>=2.0.2
    , scripts

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Spec.SkySpec
  hs-source-dirs: test
  build-depends:
    , base ^>=4.18.2.1
    , hspec >=2.9
    , hex-text ^>=0.1.0.9
    , text ^>=2.0.2
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0
    , plutus-tx-plugin ^>=1.34.1.0
    , scripts
