cabal-version: 3.6
name:          sky-atlas
version:       0.1.0

common common
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code -fplugin-opt
    PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library common
  import:             common, plutus-ghc-options
  hs-source-dirs:     common
  default-extensions: NoImplicitPrelude
  exposed-modules:
    Crypto
    DA
    Trie
    Types

  build-depends:
    , base
    , cardano-crypto-class
    , hex-text
    , plutus-ledger-api
    , plutus-tx
    , text

library onchain
  import:             common, plutus-ghc-options
  hs-source-dirs:     onchain
  default-extensions:
    NoImplicitPrelude
    Strict

  exposed-modules:
    Contract
    Contract.Bounty
    Contract.SkyBridge
    Contract.SkyMintingPolicy

  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , sky-atlas:common

-- if !(impl(ghcjs) || os(ghcjs))
--   build-depends: plutus-tx-plugin

library offchain-lib
  import:          common
  hs-source-dirs:  offchain
  exposed-modules:
  build-depends:
    , atlas-cardano     >=0.12.0
    , base
    , sky-atlas:common

-- , aeson
-- , containers
-- , servant-server
-- , servant-swagger
-- , swagger2
-- , text

executable sky-atlas
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:  base

-- , atlas-cardano  >=0.12.0
-- , sky-atlas:offchain-lib

-- , aeson-pretty
-- , bytestring
-- , http-types
-- , servant-server
-- , transformers
-- , wai-cors
-- , warp

test-suite tests
  import:         common
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: tests
  other-modules:
  build-depends:
    , base
    , sky-atlas:offchain-lib
    , sky-atlas:onchain
    , tasty
