cabal-version: 3.6
name:          sky-atlas
version:       0.1.0

common common
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code -fplugin-opt
    PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library common
  import:             common, plutus-ghc-options
  hs-source-dirs:     common
  default-extensions: NoImplicitPrelude
  exposed-modules:
    Common
    Common.Crypto
    Common.DA
    Common.OffChain
    Common.OnChain
    Common.Trie
    Common.Types
    Common.Types.Base
    Common.Types.Cons
    Common.Types.Lift

  build-depends:
    , aeson
    , base
    , cardano-crypto-class
    , hex-text
    , plutus-ledger-api
    , plutus-tx
    , servant
    , text

library onchain
  import:             common, plutus-ghc-options
  hs-source-dirs:     onchain
  default-extensions:
    NoImplicitPrelude
    Strict

  exposed-modules:
    Contract
    Contract.Bounty
    Contract.SkyBridge
    Contract.SkyMintingPolicy

  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , sky-atlas:common

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

library offchain
  import:          common
  hs-source-dirs:  offchain
  exposed-modules:
    API
    API.Bridge
    API.Topic
    API.Types

  build-depends:
    , aeson
    , atlas-cardano     >=0.12.0
    , base
    , bytestring
    , log-base
    , mtl
    , plutus-tx
    , servant-server
    , sky-atlas:common
    , text
    , warp
    , yaml

executable sky-atlas
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , log-base
    , sky-atlas:common
    , sky-atlas:offchain

test-suite common-tests
  import:         common
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        CommonSpec.hs
  hs-source-dirs: tests
  other-modules:
    Common.CryptoSpec
    Common.DaSpec
    Common.TrieSpec
    Common.TypesSpec

  build-depends:
    , base
    , hspec
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , sky-atlas:common
    , text

test-suite offchain-tests
  import:         common
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        OffChainSpec.hs
  hs-source-dirs: tests
  other-modules:  OffChain.API
  build-depends:
    , base
    , bytestring
    , hspec
    , http-client
    , log-base
    , servant-client
    , servant-server
    , sky-atlas:common
    , sky-atlas:offchain
    , text

test-suite onchain-tests
  import:         common, plutus-ghc-options
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        OnChainSpec.hs
  hs-source-dirs: tests
  other-modules:  OnChain.ContractSpec
  build-depends:
    , base
    , hspec
    , plutus-ledger-api
    , plutus-tx
    , sky-atlas:common
    , sky-atlas:onchain
