cabal-version: 3.6
name:          sky-atlas
version:       0.1.0

common common
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

-- recommended plutus ghc options
common plutus-ghc-options
  ghc-options:
    -fno-full-laziness -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-spec-constr -fno-specialise
    -fno-strictness -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library common
  import:             common, plutus-ghc-options
  hs-source-dirs:     common
  default-extensions:
    NoImplicitPrelude
    Strict

  exposed-modules:
    Common
    Common.Crypto
    Common.DA
    Common.OffChain
    Common.OnChain
    Common.Trie
    Common.Types
    Common.Types.Base
    Common.Types.Cons
    Common.Types.Lift
    Common.Types.Lift2

  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-crypto-class
    , hex-text
    , openapi3
    , plutus-ledger-api
    , plutus-tx
    , servant
    , text

library onchain
  import:             common, plutus-ghc-options
  hs-source-dirs:     onchain
  default-extensions:
    NoImplicitPrelude
    Strict

  exposed-modules:
    Contract
    Contract.Bounty
    Contract.DaH
    Contract.SkyBridge
    Contract.SkyMintingPolicy
    Contract.TrieH

  build-depends:
    , base
    , plutus-core        ^>=1.49.0.0
    , plutus-ledger-api  ^>=1.49.0.0
    , plutus-tx          ^>=1.49.0.0
    , plutus-tx-plugin   ^>=1.49.0.0
    , sky-atlas:common

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

library offchain
  import:             common
  hs-source-dirs:     offchain
  default-extensions: TypeOperators
  exposed-modules:
    API
    API.Bounty
    API.Bounty.Contracts
    API.Bridge
    API.Bridge.Contracts
    API.Da
    API.SkyMintingPolicy
    API.Types
    App
    App.Env
    App.Error
    Utils

  build-depends:
    , aeson
    , atlas-cardano
    , base
    , bytestring
    , lens
    , log-base
    , mtl
    , openapi3
    , plutus-core         ^>=1.49.0.0
    , plutus-ledger-api   ^>=1.49.0.0
    , plutus-tx           ^>=1.49.0.0
    , plutus-tx-plugin    ^>=1.49.0.0
    , servant-openapi3
    , servant-server
    , servant-swagger-ui
    , sky-atlas:common
    , sky-atlas:onchain
    , text
    , time

executable sky-atlas
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , atlas-cardano
    , base
    , http-types
    , log-base
    , sky-atlas:offchain
    , wai-cors
    , wai-extra
    , warp
    , yaml

test-suite common-tests
  import:         common
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        CommonSpec.hs
  hs-source-dirs: tests
  other-modules:
    Common.CryptoSpec
    Common.DaSpec
    Common.TrieSpec
    Common.TypesSpec

  build-depends:
    , base
    , plutus-core        ^>=1.49.0.0
    , plutus-ledger-api  ^>=1.49.0.0
    , plutus-tx          ^>=1.49.0.0
    , plutus-tx-plugin   ^>=1.49.0.0
    , sky-atlas:common
    , tasty
    , tasty-hunit
    , tasty-quickcheck

test-suite offchain-tests
  import:         common
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        OffChainSpec.hs
  hs-source-dirs: tests
  other-modules:  OffChain.API
  build-depends:
    , atlas-cardano
    , base
    , http-client
    , log-base
    , servant-client
    , servant-client-core
    , servant-server
    , sky-atlas:common
    , sky-atlas:offchain
    , tasty
    , tasty-hunit
    , warp
    , yaml

test-suite onchain-tests
  import:         common, plutus-ghc-options
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        OnChainSpec.hs
  hs-source-dirs: tests
  other-modules:
    OnChain.BountySpec
    OnChain.BridgeSpec
    OnChain.ContractSpec

  build-depends:
    , atlas-cardano
    , base
    , extra
    , plutus-core         ^>=1.49.0.0
    , plutus-ledger-api   ^>=1.49.0.0
    , plutus-tx           ^>=1.49.0.0
    , plutus-tx-plugin    ^>=1.49.0.0
    , sky-atlas:common
    , sky-atlas:offchain
    , sky-atlas:onchain
    , tasty
    , tasty-hunit
    , time
